# shopify-invoicescraper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.bat  start.bat
src/: __init__.py  config.py  main.py  models.py  scraper.py
src/static/: status.html
tests/: conftest.py  test_api.py  test_config.py  test_models.py  test_scraper.py
